# llm_code_review_arch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
diagrams/: current-flow.md  proposed-flow.md
docs/: 00-problem-analysis.md  01-overview.md  02-architecture.md  03-current-environment.md  04-task-workflow-design.md
docs/components/: 01-description-refiner.md  02-change-matcher.md  03-code-reviewer.md  04-summary-generator.md  05-review-validator.md
docs/improvements/: call-optimization.md  cot-enhancement.md
docs/prompts/: prompt-strategy.md
examples/input/: sample-pr-input.json
examples/output/: sample-pr-summary.json  sample-review-result.json
references/external-systems/: 00-overview.md  01-coderabbit.md  02-pr-agent.md  03-github-copilot.md  04-amazon-codeguru.md  05-comparison.md  06-lessons-learned.md
schemas/input/: pr-input.schema.json
schemas/internal/: match-result.schema.json  refined-spec.schema.json  validated-review.schema.json
schemas/output/: pr-summary.schema.json  review-result.schema.json
src/llm_code_review_arch/: __init__.py
