[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_code_review_arch"
version = "0.1.0"
description = "LLM Code Review Architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
